Fix about styling so our group content remains vertically aligned

--- a/css/about.css
+++ b/css/about.css
@@ -102,6 +102,7 @@ p {
 .group-content {
     padding-left: 6px;
     margin-bottom: -2px;
+    align-self: center;
 }
 
 .group-meta{
@@ -139,6 +140,6 @@ p {
 }
 
 #stitch-history{
-    margin-top: -2px;
+    margin-top: -6px;
     margin-right: 2px;
 }
